# cloudseed-juce

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.4420e97.4.10-pre1  README.md
modules/CloudSeedJUCE/: CMakeLists.txt
modules/CloudSeedJUCE/prototype/NewProject/: NewProject.jucer
modules/CloudSeedJUCE/prototype/NewProject/Builds/CodeBlocksLinux/: NewProject.cbp  resources.rc
modules/CloudSeedJUCE/prototype/NewProject/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
modules/CloudSeedJUCE/prototype/NewProject/Source/: PluginProcessor.cpp  PluginProcessor.h
modules/CloudSeedJUCE/src/: BasicWidgets.cpp  BasicWidgets.hpp  CustomStandaloneApp.cpp  CustomStandaloneApp.hpp  InfoString.hpp  Layout.cpp  Layout.hpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Widgets.cpp  Widgets.hpp
modules/CloudSeedNative/: CMakeLists.txt  README.md
modules/CloudSeedNative/src/: AllpassDiffuser.h  DelayLine.h  Exports.cpp  FastSin.h  ModulatedAllpass.h  ModulatedDelay.h  MultitapDiffuser.h  ReverbChannel.h  ReverbController.h
modules/CloudSeedNative/src/AudioLib/: Biquad.cpp  Hp1.h  Lp1.h  MathDefs.h
modules/Factory Programs/: The 90s Are Back.json
